Add parallel requests